src/tests/testfiles/unary-operators/4.txt
testfiles/unary-operators/4.c:4:5: error: invalid operands to logical '!' (have 'float *', need 'int')
!ff;
^
